# voice-transcriber

./: GUIDE.md  README.md  pyproject.toml
src/voice_transcriber/: cli.py  formatter.py  transcriber.py  watcher.py
